--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             This website is awesome
                         </div>
                         <div class="text">
-                            TextTextTextTextTextTextTextTextTextTextTextText
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         </div>
                         <button>Sign up</button>
                     </div>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="info">
-
+            
         </div>
         <div class="quote">
 
