--- a/index.html
+++ b/index.html
@@ -32,7 +32,25 @@
             </div>
         </div>
         <div class="info">
-            
+            <div class="info-header">Some random information.</div>
+            <div class="items">
+                <div class="item">
+                    <div class="square"></div>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+                <div class="item">
+                    <div class="square"></div>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+                <div class="item">
+                    <div class="square"></div>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+                <div class="item">
+                    <div class="square"></div>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
         </div>
         <div class="quote">
 
