Add quote section content
Wrote code for quote section structure and styled it.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,15 @@
                 </div>
             </div>
         </div>
-        <div class="quote">
-
+        <div class="quote-wrap">
+            <div class="quote">
+                <div class="quote-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </div>
+                <div class="author">
+                    ~ Lorem ipsum
+                </div>
+            </div>      
         </div>
         <div class="signup">
 
