Add signup section content
Wrote code for signup section structure and styled it.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,17 @@
             </div>      
         </div>
         <div class="signup">
-
+            <div class="box">
+                <div class="box-description">
+                    <div class="box-header">
+                        Call to action! It's time!
+                    </div>
+                    <div class="box-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </div>
+                </div>
+                <button>Sign up</button>
+            </div>
         </div>
         <div class="footer">
 
