Add footer section and adjust styles
Wrote code for footer section structure and styled it. Made some
minor style changes.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,15 @@
             </div>
         </div>
         <div class="footer">
-
+            <div class="footer-content">
+                <div>
+                    Made by <a href="https://github.com/rafallyczek">rafallyczek</a>
+                </div>
+                <div>
+                    Copyright © <a href="https://www.theodinproject.com/">The Odin Project</a> 2023
+                </div>
+            </div>
+            
         </div>
     </body>
 </html>
