--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
         <div class="header-wrap">
             <div class="header">
                 <div class="top">
-                    <div class="logo">Header Logo</div>
+                    <div class="logo">Fox website</div>
                     <ul>
-                        <li><a href="#">header link one</a></li>
-                        <li><a href="#">header link two</a></li>
-                        <li><a href="#">header link three</a></li>
+                        <li><a href="#">First link</a></li>
+                        <li><a href="#">Second link</a></li>
+                        <li><a href="#">Third link</a></li>
                     </ul>
                 </div>   
                 <div class="bottom">
                     <div class="about">
                         <div class="title">
-                            This website is awesome
+                            Foxes are awesome
                         </div>
                         <div class="text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            This page was made to tell the whole world how awesome foxes are.
                         </div>
                         <button>Sign up</button>
                     </div>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="info">
-            <div class="info-header">Some random information.</div>
+            <div class="info-header">Information about foxes.</div>
             <div class="items">
                 <div class="item">
                     <div class="square"></div>
@@ -66,10 +66,10 @@
             <div class="box">
                 <div class="box-description">
                     <div class="box-header">
-                        Call to action! It's time!
+                        Adopt a fox! It's time!
                     </div>
                     <div class="box-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Signup for fox adoption program right now!
                     </div>
                 </div>
                 <button>Sign up</button>
