Fill up missing content and adjust styles
Replaced placeholder information with some text related with page topic.
Also made some changes in styling.

--- a/index.html
+++ b/index.html
@@ -35,30 +35,30 @@
             <div class="info-header">Information about foxes.</div>
             <div class="items">
                 <div class="item">
-                    <div class="square"></div>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <div class="square"><p>&#10003;</p></div>
+                    <p>Foxes are adorable</p>
                 </div>
                 <div class="item">
-                    <div class="square"></div>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <div class="square"><p>&#10003;</p></div>
+                    <p>Their fur is fluffy</p>
                 </div>
                 <div class="item">
-                    <div class="square"></div>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <div class="square"><p>&#10003;</p></div>
+                    <p>They're cunning hunters</p>
                 </div>
                 <div class="item">
-                    <div class="square"></div>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <div class="square"><p>&#10003;</p></div>
+                    <p>They're just awesome</p>
                 </div>
             </div>
         </div>
         <div class="quote-wrap">
             <div class="quote">
                 <div class="quote-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Foxes are totally awesome creatures.
                 </div>
                 <div class="author">
-                    ~ Lorem ipsum
+                    ~ A smart person
                 </div>
             </div>      
         </div>
