Reorganize css file and add global variables
Added comments and changed organization of css file to make it more
readable. Also added global variables for colors.

--- a/index.html
+++ b/index.html
@@ -7,53 +7,53 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
     <body>
-        <div class="header-wrap">
+        <div class="header-wrap bg-clr-brown">
             <div class="header">
                 <div class="top">
-                    <div class="logo">Fox website</div>
-                    <ul>
+                    <div class="logo text-clr-light">Fox website</div>
+                    <ul class="text-clr-light">
                         <li><a href="#">First link</a></li>
                         <li><a href="#">Second link</a></li>
                         <li><a href="#">Third link</a></li>
                     </ul>
                 </div>   
                 <div class="bottom">
-                    <div class="about">
+                    <div class="about text-clr-light">
                         <div class="title">
                             Foxes are awesome
                         </div>
                         <div class="text">
                             This page was made to tell the whole world how awesome foxes are.
                         </div>
-                        <button>Sign up</button>
+                        <button class="bg-clr-orange text-clr-light">Sign up</button>
                     </div>
                     <img src="./img/fox.jpg"> 
                 </div>
             </div>
         </div>
         <div class="info">
-            <div class="info-header">Information about foxes.</div>
+            <div class="info-header text-clr-dark text-center">Information about foxes.</div>
             <div class="items">
                 <div class="item">
-                    <div class="square"><p>&#10003;</p></div>
-                    <p>Foxes are adorable</p>
+                    <div class="square"><p class="text-clr-orange">&#10003;</p></div>
+                    <p class="text-clr-dark text-center">Foxes are adorable</p>
                 </div>
                 <div class="item">
-                    <div class="square"><p>&#10003;</p></div>
-                    <p>Their fur is fluffy</p>
+                    <div class="square"><p class="text-clr-orange">&#10003;</p></div>
+                    <p class="text-clr-dark text-center">Their fur is fluffy</p>
                 </div>
                 <div class="item">
-                    <div class="square"><p>&#10003;</p></div>
-                    <p>They're cunning hunters</p>
+                    <div class="square"><p class="text-clr-orange">&#10003;</p></div>
+                    <p class="text-clr-dark text-center">They're cunning hunters</p>
                 </div>
                 <div class="item">
-                    <div class="square"><p>&#10003;</p></div>
-                    <p>They're just awesome</p>
+                    <div class="square"><p class="text-clr-orange">&#10003;</p></div>
+                    <p class="text-clr-dark text-center">They're just awesome</p>
                 </div>
             </div>
         </div>
-        <div class="quote-wrap">
-            <div class="quote">
+        <div class="quote-wrap bg-clr-gray">
+            <div class="quote text-clr-dark">
                 <div class="quote-text">
                     Foxes are totally awesome creatures.
                 </div>
@@ -63,7 +63,7 @@
             </div>      
         </div>
         <div class="signup">
-            <div class="box">
+            <div class="box bg-clr-orange">
                 <div class="box-description">
                     <div class="box-header">
                         Adopt a fox! It's time!
@@ -72,19 +72,12 @@
                         Signup for fox adoption program right now!
                     </div>
                 </div>
-                <button>Sign up</button>
+                <button class="bg-clr-orange text-clr-light">Sign up</button>
             </div>
         </div>
-        <div class="footer">
-            <div class="footer-content">
-                <div>
-                    Made by <a href="https://github.com/rafallyczek">rafallyczek</a>
-                </div>
-                <div>
-                    Copyright © <a href="https://www.theodinproject.com/">The Odin Project</a> 2023
-                </div>
-            </div>
-            
+        <div class="footer bg-clr-brown text-center">  
+            <p>Made by <a class="text-clr-orange" href="https://github.com/rafallyczek">rafallyczek</a></p>  
+            <p>Copyright © <a class="text-clr-orange" href="https://www.theodinproject.com/">The Odin Project</a> 2023</p>
         </div>
     </body>
 </html>
