--- a/index.html
+++ b/index.html
@@ -4,80 +4,89 @@
         <meta charset="utf-8">
         <title>Odin Landing Page</title>
         <link rel="stylesheet" href="./css/style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
     <body>
-        <div class="header-wrap bg-clr-brown">
-            <div class="header">
-                <div class="top">
-                    <div class="logo text-clr-light">Fox website</div>
-                    <ul class="text-clr-light">
-                        <li><a href="#">First link</a></li>
-                        <li><a href="#">Second link</a></li>
-                        <li><a href="#">Third link</a></li>
-                    </ul>
+
+        <header class="primary-header bg-clr-primary">
+            <div class="container">
+                <div class="header">
+                    <a href="#" class="text-clr-light fs-medium fw-bold">Fox website</a>
+                    <nav class="primary-navigation">
+                        <ul class="text-clr-light">
+                            <li><a href="#">First link</a></li>
+                            <li><a href="#">Second link</a></li>
+                            <li><a href="#">Third link</a></li>
+                        </ul>
+                    </nav>
                 </div>   
-                <div class="bottom">
+                <div class="hero">
                     <div class="about text-clr-light">
-                        <div class="title">
+                        <h1 class="fs-x-large fw-bold">
                             Foxes are awesome
-                        </div>
-                        <div class="text">
+                        </h1>
+                        <p class="fs-small">
                             This page was made to tell the whole world how awesome foxes are.
-                        </div>
-                        <button class="bg-clr-orange text-clr-light">Sign up</button>
+                        </p>
+                        <button class="bg-clr-secondary text-clr-light">Sign up</button>
                     </div>
                     <img src="./img/fox.jpg"> 
                 </div>
             </div>
-        </div>
-        <div class="info">
-            <div class="info-header text-clr-dark text-center">Information about foxes.</div>
-            <div class="items">
-                <div class="item">
-                    <div class="square"><p class="text-clr-orange">&#10003;</p></div>
-                    <p class="text-clr-dark text-center">Foxes are adorable</p>
-                </div>
-                <div class="item">
-                    <div class="square"><p class="text-clr-orange">&#10003;</p></div>
-                    <p class="text-clr-dark text-center">Their fur is fluffy</p>
-                </div>
-                <div class="item">
-                    <div class="square"><p class="text-clr-orange">&#10003;</p></div>
-                    <p class="text-clr-dark text-center">They're cunning hunters</p>
-                </div>
-                <div class="item">
-                    <div class="square"><p class="text-clr-orange">&#10003;</p></div>
-                    <p class="text-clr-dark text-center">They're just awesome</p>
-                </div>
-            </div>
-        </div>
-        <div class="quote-wrap bg-clr-gray">
-            <div class="quote text-clr-dark">
-                <div class="quote-text">
-                    Foxes are totally awesome creatures.
-                </div>
-                <div class="author">
-                    ~ A smart person
-                </div>
-            </div>      
-        </div>
-        <div class="signup">
-            <div class="box bg-clr-orange">
-                <div class="box-description">
-                    <div class="box-header">
-                        Adopt a fox! It's time!
+        </header>
+
+        <main>
+            <section class="info">
+                <h2 class="text-clr-dark text-center fs-large fw-bold">Information about foxes.</h2>
+                <div class="items">
+                    <div class="item">
+                        <div class="square"><p class="text-clr-secondary">&#10003;</p></div>
+                        <p class="text-clr-dark text-center">Foxes are adorable</p>
                     </div>
-                    <div class="box-text">
-                        Signup for fox adoption program right now!
+                    <div class="item">
+                        <div class="square"><p class="text-clr-secondary">&#10003;</p></div>
+                        <p class="text-clr-dark text-center">Their fur is fluffy</p>
+                    </div>
+                    <div class="item">
+                        <div class="square"><p class="text-clr-secondary">&#10003;</p></div>
+                        <p class="text-clr-dark text-center">They're cunning hunters</p>
+                    </div>
+                    <div class="item">
+                        <div class="square"><p class="text-clr-secondary">&#10003;</p></div>
+                        <p class="text-clr-dark text-center">They're just awesome</p>
                     </div>
                 </div>
-                <button class="bg-clr-orange text-clr-light">Sign up</button>
-            </div>
-        </div>
-        <div class="footer bg-clr-brown text-center">  
-            <p>Made by <a class="text-clr-orange" href="https://github.com/rafallyczek">rafallyczek</a></p>  
-            <p>Copyright © <a class="text-clr-orange" href="https://www.theodinproject.com/">The Odin Project</a> 2023</p>
-        </div>
+            </section>
+
+            <section class="quote-wrap bg-clr-gray">
+                <div class="quote text-clr-dark">
+                    <p class="fs-large fw-regular font-italic">
+                        Foxes are totally awesome creatures.
+                    </p>
+                    <p class="author fs-small fw-bold">
+                        ~ A smart person
+                    </p>
+                </div>      
+            </section>
+            
+            <section class="signup">
+                <div class="box bg-clr-secondary">
+                    <div class="box-description">
+                        <p class="fw-bold">
+                            Adopt a fox! It's time!
+                        </p>
+                        <p class="box-text">
+                            Signup for fox adoption program right now!
+                        </p>
+                    </div>
+                    <button class="bg-clr-secondary text-clr-light">Sign up</button>
+                </div>
+            </section>
+        </main>
+
+        <footer class="footer bg-clr-primary text-center">  
+            <p>Made by <a class="text-clr-secondary" href="https://github.com/rafallyczek">rafallyczek</a></p>  
+            <p>Copyright © <a class="text-clr-secondary" href="https://www.theodinproject.com/">The Odin Project</a> 2023</p>
+        </footer>
+
     </body>
 </html>
