Change to mobile-first approach
Changed media queries to set rules for larger screens instead
of smaller ones. Also made small adjustments to padding, width
and gap measures.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </nav>
                 </div>   
                 <div class="hero">
-                    <div class="about text-clr-light">
+                    <div class="about text-clr-light text-center">
                         <h1 class="fs-x-large fw-bold">
                             Foxes are awesome
                         </h1>
