Add alt attribute to fox image
Added alt attribute to fox image in page's hero.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </p>
                         <button class="bg-clr-secondary text-clr-light">Sign up</button>
                     </div>
-                    <img src="./img/fox.jpg"> 
+                    <img src="./img/fox.jpg" alt="Close-up of red fox"> 
                 </div>
             </div>
         </header>
